# opencast-camera-control

./: Dockerfile  README.md  camera-control.yml  camera.py  config.json  config_multipleTypes.json  main.py  opencast-camera-control-0.1.0-1.el9.noarch.rpm  opencast-camera-control-0.2.0-1.el9.noarch.rpm  opencast-camera-control-0.3.0-1.el9.noarch.rpm  opencast-camera-control-0.4.0-1.el9.noarch.rpm  opencast-camera-control-0.5.0-1.el9.noarch.rpm  opencast-camera-control-0.5.1-1.el9.noarch.rpm  opencast-camera-control-0.5.2-1.el9.noarch.rpm  opencast-camera-control.key  pyproject.toml  python3-confygure-0.1.0-1.el9.noarch.rpm  requirements.txt  testCamera.py
.github/rpm/: opencast-camera-control.service  (+2 more)
occameracontrol/: __main__.py  agent.py  camera.py  camera_control_server.py  metrics.py
repodata/: 006cd6afeb13971d682f7ee7bed8d95491395b045ac435b06f608385b4492127-other.sqlite.bz2  02234f9ef4021178fcf04934be876cb8c29e409c93ebe7d510b43beb604bfe8c-primary.sqlite.bz2  06168dfb95bb09999b50e81a9392e6086af3471ecd41f192c2f03235f7f6f708-other.sqlite.bz2  141223b8afaee909734427f9d1d4c020cbd30cb379f3893f00fa8a25117b4877-primary.sqlite.bz2  17f86b5eecabd4a047a00eb276685dc76bf5bbc10e6560d7561b2293737fa166-primary.sqlite.bz2  1e9c149c2b0a29ff553b5eed8b9fc68517d79231d72d9fa048441bd60efffb6e-primary.sqlite.bz2  275e802bb9440c9e6ba53e6d4d44db938b4470de5619de2fa79f1174a062b63e-primary.sqlite.bz2  4722aa2ee072161582d3a265a3a208d2a308dfe77c878b1dd42a047870710693-filelists.sqlite.bz2  5b5bdbb168087b69cc559cad273e735f09b5ca914012dcab8b95ef817d7247f1-other.sqlite.bz2  repomd.xml  (+18 more)
(+6 files in other folders)
